--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -61,7 +61,7 @@ We report the relative $L^2$ error with respect to the optimization time in \Cre
  
 \begin{figure}
     \centering
-    \includegraphics{kfac_pinns_exp/exp30_heat4d_groupplot/loss_over_time.pdf}
+    \includegraphics{../kfac_pinns_exp/exp30_heat4d_groupplot/loss_over_time.pdf}
     \caption{We report the performance of different optimizers on the Poisson equation~\eqref{eq:2D-Poisson} measured in relative $L^2$ error against wall clock time for architectures with different parameter dimensions $D$; ...}
     \label{fig:4D-heat}
 \end{figure}
