Update on Overleaf.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -510,7 +510,7 @@
 }
 
 @article{muller2024optimization,
-  title={Optimization in SciML--A Function Space Perspective},
+  title={{Optimization in SciML--A Function Space Perspective}},
   author={M{\"u}ller, Johannes and Zeinhofer, Marius},
   journal={arXiv preprint arXiv:2402.07318},
   year={2024}
