--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -3,7 +3,8 @@
 The field of neural network based approaches to the numerical solution of partial differential equations (PDEs) is growing at an unprecedented speed. % and one of the most active subfields of scientific machine learning~\cite{?}. 
 Whereas the idea of training the parameters of a neural network to minimize the residual of a PDE can be traced back at least to the works of~\cite{dissanayake1994neural, lagaris1998artificial} this approach was only recently popularized under the name \emph{deep Galerkin method} (DGM) and \emph{Physics-informed neural networks} (PINNs) through the works of~\cite{sirignano2018dgm, raissi2019physics}, respectively.  
 Now it constitutes one of the most popular network-based approaches to the numerical solution of partial differential equations as it is easy to implement, can seamlessly incorporate data, and is commonly attributed with the promise of being able to work well in high dimensions. 
-Despite their immense popularity, PINNs are notoriously difficult and resource-demanding to optimize \citep{wang2021understanding}\todo{list more papers documenting pathologies?} and fail to provide satisfactory accuracy when trained with first-order methods even for simple problems~\cite{zeng2022competitive, muller2023achieving}. 
+Despite their immense popularity, PINNs are notoriously difficult and resource-demanding to optimize \citep{wang2021understanding}%\todo{list more papers documenting pathologies?} 
+and fail to provide satisfactory accuracy when trained with first-order methods even for simple problems~\citep{zeng2022competitive, muller2023achieving}. 
 Recently, second-order methods that use the function space geometry to design preconditioners have shown remarkable promise in addressing the training difficulties of PINNs~\citep{zeng2022competitive, muller2023achieving, de2023operator,jnini2024gauss, muller2024optimization}. 
 %For example, \emph{energy natural gradient descent} (ENGD) as proposed in \cite{muller2023achieving} emulates Newton's method \emph{in function space} and is able to achieve highly accurate PINN solutions in few iterations. 
 However, these methods require solving a linear system of the size of the network's parameters and thus come with a cubic computational cost for every iteration. % as they are required to solve a dense linear system of the size of the parameter space of the network. Hence, this is only feasible for networks of small size when done naively. 
