--- a/paper/main.tex
+++ b/paper/main.tex
@@ -55,7 +55,8 @@ Empirically, we find that our KFAC-based optimizers are competitive with expensi
 \input{sections/background_engd.tex}
 \input{sections/background_kfac.tex}
 
-\section{A Kronecker-factored Approximate Gauß-Newton Method for PINNs}\label{sec:kfac_pinns}
+\section{Kronecker-Factored Approximate Curvature for
+PINNs}\label{sec:kfac_pinns}
 
 
 \input{sections/contribution.tex}
@@ -64,7 +65,7 @@ Empirically, we find that our KFAC-based optimizers are competitive with expensi
 
 \input{sections/experiments.tex}
 
-\section{Conclusion}
+\section{Discussion and Conclusion}
 \input{sections/conclusion.tex}
 
 \input{sections/acknowledgements.tex}
@@ -76,6 +77,8 @@ Empirically, we find that our KFAC-based optimizers are competitive with expensi
 \appendix
 
 \input{sections/appendix.tex}
+
+\input{paper/sections/checklist}
 
 \end{document}
 %%% Local Variables:
