[TEX] Describe best run hyper-parameters for Poisson2d [no ci]

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -78,7 +78,7 @@ PINNs}\label{sec:kfac_pinns}
 
 \input{sections/appendix.tex}
 
-\input{paper/sections/checklist}
+\input{sections/checklist.tex}
 
 \end{document}
 %%% Local Variables:
